--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "shopping-math"]
-	path = /React/Practicas/shopping-math
+	path = shopping-math
 	url = https://github.com/MathewsAlv/Shopping-Math.git
